--- a/One-Page Website/CSS/one_page_website.css
+++ b/One-Page Website/CSS/one_page_website.css
@@ -137,3 +137,58 @@ p {
     padding: 5px;
 }
 
+/*======================
+ Form Section
+=======================*/
+
+form {
+    border-radius: 3px;
+    background-color: #8d0f0f;
+    padding: 10px;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px;
+    border: 2px solid #000;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+input[type=submit] {
+    background-color: rgb(224, 106, 9); 
+    color: rgb(6, 60, 238); 
+    font-weight: bold;
+    font-size: 25px; 
+    padding: 20px 20px;
+    text-align: center; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.terms {
+    background-color: rgb(224, 106, 9);
+    color: rgb(6, 60, 238); 
+    font-weight: bold;
+    cursor: pointer;
+     
+}
+
+input[type=submit]:hover {
+    background-color: white; 
+    color: black; 
+    transform: scale(1.05); 
+    transition: transform 1.5s; 
+}
+
