--- a/website project/CSS/shared.css
+++ b/website project/CSS/shared.css
@@ -31,6 +31,7 @@ h1 {
     font-size: 30px;
     text-transform: uppercase;
     text-align: center;
+	margin-left: -65px;
     color: #E91C1C;
     text-shadow: 2px 2px 3 px rgba(0,0,0,0.5);
 
